--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1415,12 +1415,12 @@ body {
 }
 .cid-rqDmUsacME .navbar {
   padding: .5rem 0;
-  background: #2e2e2e;
+  background: #054a91;
   transition: none;
   min-height: 77px;
 }
 .cid-rqDmUsacME .navbar-dropdown.bg-color.transparent.opened {
-  background: #2e2e2e;
+  background: #054a91;
 }
 .cid-rqDmUsacME a {
   font-style: normal;
@@ -1511,7 +1511,7 @@ body {
   padding-bottom: 0;
 }
 .cid-rqDmUsacME .dropdown .dropdown-menu {
-  background: #2e2e2e;
+  background: #054a91;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -2360,12 +2360,12 @@ body {
 }
 .cid-rqDmUsacME .navbar {
   padding: .5rem 0;
-  background: #2e2e2e;
+  background: #054a91;
   transition: none;
   min-height: 77px;
 }
 .cid-rqDmUsacME .navbar-dropdown.bg-color.transparent.opened {
-  background: #2e2e2e;
+  background: #054a91;
 }
 .cid-rqDmUsacME a {
   font-style: normal;
@@ -2456,7 +2456,7 @@ body {
   padding-bottom: 0;
 }
 .cid-rqDmUsacME .dropdown .dropdown-menu {
-  background: #2e2e2e;
+  background: #054a91;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -2886,12 +2886,12 @@ body {
 }
 .cid-rqDmUsacME .navbar {
   padding: .5rem 0;
-  background: #2e2e2e;
+  background: #054a91;
   transition: none;
   min-height: 77px;
 }
 .cid-rqDmUsacME .navbar-dropdown.bg-color.transparent.opened {
-  background: #2e2e2e;
+  background: #054a91;
 }
 .cid-rqDmUsacME a {
   font-style: normal;
@@ -2982,7 +2982,7 @@ body {
   padding-bottom: 0;
 }
 .cid-rqDmUsacME .dropdown .dropdown-menu {
-  background: #2e2e2e;
+  background: #054a91;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -3431,12 +3431,12 @@ body {
 }
 .cid-rrDOyfQL41 .navbar {
   padding: .5rem 0;
-  background: #2e2e2e;
+  background: #054a91;
   transition: none;
   min-height: 77px;
 }
 .cid-rrDOyfQL41 .navbar-dropdown.bg-color.transparent.opened {
-  background: #2e2e2e;
+  background: #054a91;
 }
 .cid-rrDOyfQL41 a {
   font-style: normal;
@@ -3527,7 +3527,7 @@ body {
   padding-bottom: 0;
 }
 .cid-rrDOyfQL41 .dropdown .dropdown-menu {
-  background: #2e2e2e;
+  background: #054a91;
   display: none;
   position: absolute;
   min-width: 5rem;
