--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1834,7 +1834,7 @@ body {
   }
 }
 .cid-rrfW4qLeaS {
-  padding-top: 45px;
+  padding-top: 30px;
   padding-bottom: 15px;
   background-color: #f17300;
 }
@@ -1853,32 +1853,26 @@ body {
   color: #ffffff;
   text-align: center;
 }
-.cid-rsEFz1nBFP {
-  padding-top: 0px;
+.cid-rsEM5EqvPp {
+  padding-top: 15px;
   padding-bottom: 0px;
   background-color: #ffffff;
 }
-.cid-rsEFz1nBFP h3 {
+.cid-rsEM5EqvPp .mbr-text {
+  color: #767676;
+}
+.cid-rsEM5EqvPp h4 {
   text-align: center;
 }
-.cid-rsEFz1nBFP .mbr-section-subtitle {
-  color: #767676;
-  font-weight: 300;
+.cid-rsEM5EqvPp p {
+  text-align: center;
 }
-.cid-rsEFz1nBFP .mbr-content-text {
-  color: #767676;
-}
-.cid-rsEFz1nBFP .panel-item {
-  background: #ffffff;
-}
-.cid-rsEFz1nBFP .card {
-  word-wrap: break-word;
-}
-.cid-rsEFz1nBFP .mbr-iconfont {
-  font-size: 80px;
+.cid-rsEM5EqvPp .card-img span {
+  font-size: 96px;
   color: #149dcc;
 }
-.cid-rsEFz1nBFP H3 {
+.cid-rsEM5EqvPp .card-title,
+.cid-rsEM5EqvPp .card-img {
   color: #054a91;
 }
 .cid-rrCAqzNDso {
