create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2353,7 +2353,7 @@ body {
 }
 .cid-ru7LqRR3Y1 .form-text {
   color: #ffffff;
-  text-align: right;
+  text-align: center;
 }
 @media (max-width: 767px) {
   .cid-ru7LqRR3Y1 .content {
@@ -2444,10 +2444,10 @@ body {
 }
 .cid-ru7LqRR3Y1 .foot-title {
   color: #f17300;
-  text-align: right;
+  text-align: center;
 }
 .cid-ru7LqRR3Y1 .mbr-links-column {
-  text-align: right;
+  text-align: center;
   color: #ffffff;
 }
 .cid-ru7LqRR3Y1 .foot-logo {
