create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1833,6 +1833,86 @@ body {
     width: 100% !important;
   }
 }
+.cid-rvkR16I8bi {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  position: relative;
+  background-color: #ffffff;
+}
+.cid-rvkR16I8bi p {
+  color: #767676;
+}
+.cid-rvkR16I8bi .mbr-section-subtitle {
+  color: #767676;
+  font-weight: 300;
+}
+.cid-rvkR16I8bi .toggle-content {
+  flex-basis: 100%;
+  -webkit-flex-basis: 100%;
+}
+.cid-rvkR16I8bi .card {
+  border-radius: 0px;
+  margin-bottom: -1px;
+}
+.cid-rvkR16I8bi .card .card-header {
+  border-radius: 0px;
+  border: 0px;
+  padding: 0;
+}
+.cid-rvkR16I8bi .card .card-header a.panel-title {
+  margin-bottom: 0;
+  margin-top: -1px;
+  font-weight: 500;
+  font-style: normal;
+  display: block;
+  text-decoration: none !important;
+}
+.cid-rvkR16I8bi .card .card-header a.panel-title:focus {
+  text-decoration: none !important;
+}
+.cid-rvkR16I8bi .card .card-header a.panel-title h4 {
+  border: 1px solid #dfdfdf;
+  padding: 1.3rem 2rem;
+  margin-bottom: 0;
+}
+.cid-rvkR16I8bi .card .card-header a.panel-title h4 .sign {
+  padding-right: 1rem;
+}
+.cid-rvkR16I8bi .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+}
+@media (max-width: 991px) {
+  .cid-rvkR16I8bi .mbr-figure {
+    padding-top: 2rem;
+    padding-top: 0;
+    padding-bottom: 2rem;
+  }
+  .cid-rvkR16I8bi .media-container-row {
+    -webkit-flex-direction: column-reverse;
+    flex-direction: column-reverse;
+  }
+}
+@media (min-width: 992px) {
+  .cid-rvkR16I8bi .mbr-figure {
+    padding-left: 4rem;
+    padding-left: 0;
+    padding-right: 4rem;
+  }
+  .cid-rvkR16I8bi .media-container-row {
+    -webkit-flex-direction: row-reverse;
+    flex-direction: row-reverse;
+  }
+}
+.cid-rvkR16I8bi H2 {
+  text-align: right;
+}
+.cid-rvkR16I8bi H4 {
+  text-align: right;
+}
+.cid-rvkR16I8bi .panel-text {
+  text-align: right;
+}
 .cid-rrfW4qLeaS {
   padding-top: 30px;
   padding-bottom: 15px;
@@ -2640,12 +2720,12 @@ body {
 }
 .cid-rrDOyfQL41 .navbar {
   padding: .5rem 0;
-  background: #054a91;
+  background: #2e2e2e;
   transition: none;
   min-height: 77px;
 }
 .cid-rrDOyfQL41 .navbar-dropdown.bg-color.transparent.opened {
-  background: #054a91;
+  background: #2e2e2e;
 }
 .cid-rrDOyfQL41 a {
   font-style: normal;
@@ -2736,7 +2816,7 @@ body {
   padding-bottom: 0;
 }
 .cid-rrDOyfQL41 .dropdown .dropdown-menu {
-  background: #054a91;
+  background: #2e2e2e;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -2873,10 +2953,6 @@ body {
 .cid-rrDOyfQL41 .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
-.cid-rrDOyfQL41 .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-.cid-rrDOyfQL41 .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
-  margin-bottom: 1rem;
-}
 .cid-rrDOyfQL41 .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-rrDOyfQL41 .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -2977,10 +3053,6 @@ body {
   .cid-rrDOyfQL41 .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-rrDOyfQL41 .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
-  }
-  .cid-rrDOyfQL41 .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-  .cid-rrDOyfQL41 .navbar-collapse.show .navbar-nav .nav-item:last-child {
-    margin-bottom: 1rem;
   }
   .cid-rrDOyfQL41 .navbar-collapse.collapsing .navbar-buttons,
   .cid-rrDOyfQL41 .navbar-collapse.show .navbar-buttons {
@@ -3280,10 +3352,6 @@ body {
 .cid-rqDmUsacME .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
-.cid-rqDmUsacME .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-.cid-rqDmUsacME .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
-  margin-bottom: 1rem;
-}
 .cid-rqDmUsacME .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-rqDmUsacME .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -3384,10 +3452,6 @@ body {
   .cid-rqDmUsacME .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-rqDmUsacME .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
-  }
-  .cid-rqDmUsacME .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-  .cid-rqDmUsacME .navbar-collapse.show .navbar-nav .nav-item:last-child {
-    margin-bottom: 1rem;
   }
   .cid-rqDmUsacME .navbar-collapse.collapsing .navbar-buttons,
   .cid-rqDmUsacME .navbar-collapse.show .navbar-buttons {
@@ -3743,10 +3807,6 @@ body {
 .cid-rqDmUsacME .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
-.cid-rqDmUsacME .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-.cid-rqDmUsacME .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
-  margin-bottom: 1rem;
-}
 .cid-rqDmUsacME .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-rqDmUsacME .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -3847,10 +3907,6 @@ body {
   .cid-rqDmUsacME .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-rqDmUsacME .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
-  }
-  .cid-rqDmUsacME .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-  .cid-rqDmUsacME .navbar-collapse.show .navbar-nav .nav-item:last-child {
-    margin-bottom: 1rem;
   }
   .cid-rqDmUsacME .navbar-collapse.collapsing .navbar-buttons,
   .cid-rqDmUsacME .navbar-collapse.show .navbar-buttons {
